Revert "Implement FT correction refactor"

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.comerzzia.bricodepot</groupId>
-        <artifactId>correccion-ft</artifactId>
+	<artifactId>comerzzia-bricodepot-motivos-linea</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -54,7 +54,7 @@
 
 
 	<modules>
-                <module>correccion-ft-application</module>
-                <module>correccion-ft-services</module>
-        </modules>
+		<module>comerzzia-bricodepot-motivos-linea-application</module>
+		<module>comerzzia-bricodepot-motivos-linea-services</module>
+	</modules>
 </project>
