--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,11 +8,11 @@ variables:
   GIT_SUBMODULE_STRATEGY: normal
   MAVEN_OPTS: "-Djava.awt.headless=true -Dmaven.repo.local=.m2/repository -DbuildTimestamp=${CI_COMMIT_TIMESTAMP} -DbuildNumber=$CI_PIPELINE_ID} -DbuildCommit=${CI_COMMIT_SHA} -DbuildUser=${GITLAB_USER_LOGIN}"   
   MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode --errors --fail-at-end --show-version"
-  K8S_WORKLOAD: correccion-ft
+  K8S_WORKLOAD: motivos-linea
   K8S_NAMESPACE: bricodepot
   
-  DOCKER_IMAGE_TIER1: comerzzia/programas/correccion-ft
-  DOCKER_IMAGE_CLIENT: clients/bricodepot/comerzzia/programas/correccion-ft
+  DOCKER_IMAGE_TIER1: comerzzia/programas/motivos-linea
+  DOCKER_IMAGE_CLIENT: clients/bricodepot/comerzzia/programas/motivos-linea
   DOCKER_IMAGE: $DEVELOP_REGISTRY_SERVER/$CLIENT/$DOCKER_IMAGE_TIER1
   DOCKER_IMAGE_PRE: $REGISTRY_SERVER_CLIENT_PRE/$DOCKER_IMAGE_CLIENT
   DOCKER_IMAGE_PRO: $REGISTRY_SERVER_CLIENT_PRO/$DOCKER_IMAGE_CLIENT
@@ -32,7 +32,7 @@ build_maven:
   - mvn $MAVEN_CLI_OPTS package -DskipTests -Ddocker=true
   artifacts:
     paths:
-    - correccion-ft-application/target/*.jar
+    - comerzzia-bricodepot-motivos-linea-application/target/*.jar
     expire_in: 1 hour 
     
 docker_build:
@@ -48,10 +48,10 @@ docker_build:
   script: >
     if [[ ! -z "$CI_COMMIT_TAG" ]]; then
       echo Building image "${DOCKER_IMAGE}:$CI_COMMIT_TAG, ${DOCKER_IMAGE_PRE}:$CI_COMMIT_TAG, ${DOCKER_IMAGE_PRO}:$CI_COMMIT_TAG"
-      /kaniko/executor  --context "${CI_PROJECT_DIR}/correccion-ft-application/" --dockerfile "${CI_PROJECT_DIR}/correccion-ft-application/src/main/resources/Dockerfile" --destination "${DOCKER_IMAGE}:$CI_COMMIT_TAG" --destination "${DOCKER_IMAGE_PRE}:$CI_COMMIT_TAG" --destination "${DOCKER_IMAGE_PRO}:$CI_COMMIT_TAG"
+      /kaniko/executor  --context "${CI_PROJECT_DIR}/comerzzia-bricodepot-motivos-linea-application/" --dockerfile "${CI_PROJECT_DIR}/comerzzia-bricodepot-motivos-linea-application/src/main/resources/Dockerfile" --destination "${DOCKER_IMAGE}:$CI_COMMIT_TAG" --destination "${DOCKER_IMAGE_PRE}:$CI_COMMIT_TAG" --destination "${DOCKER_IMAGE_PRO}:$CI_COMMIT_TAG"
     else
       echo Building image "${DOCKER_IMAGE}:$CI_COMMIT_BRANCH && ${DOCKER_IMAGE_PRE}:$CI_COMMIT_BRANCH"
-      /kaniko/executor  --context "${CI_PROJECT_DIR}/correccion-ft-application/" --dockerfile "${CI_PROJECT_DIR}/correccion-ft-application/src/main/resources/Dockerfile" --destination "${DOCKER_IMAGE}:$CI_COMMIT_BRANCH" --destination "${DOCKER_IMAGE_PRE}:$CI_COMMIT_BRANCH"
+      /kaniko/executor  --context "${CI_PROJECT_DIR}/comerzzia-bricodepot-motivos-linea-application/" --dockerfile "${CI_PROJECT_DIR}/comerzzia-bricodepot-motivos-linea-application/src/main/resources/Dockerfile" --destination "${DOCKER_IMAGE}:$CI_COMMIT_BRANCH" --destination "${DOCKER_IMAGE_PRE}:$CI_COMMIT_BRANCH"
     fi
   rules:
     - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
