--- a/generar-ft-de-fs-services/pom.xml
+++ b/generar-ft-de-fs-services/pom.xml
@@ -17,17 +17,16 @@
 		<spring-boot.version>2.5.5</spring-boot.version>
 	</properties>
 	
-	<dependencies>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>log4j-over-slf4j</artifactId>
-			<version>1.7.30</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-			<version>2.5.5</version>
-		</dependency>
+        <dependencies>
+                <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>log4j-over-slf4j</artifactId>
+                        <version>1.7.30</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter</artifactId>
+                </dependency>
 
 		<!-- <dependency> -->
 		<!-- <groupId>org.springframework.boot</groupId> -->
@@ -35,13 +34,41 @@
 		<!-- <version>2.5.5</version> -->
 		<!-- </dependency> -->
 
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<version>8.2.0</version>
-		</dependency>
-		
-	</dependencies>
+                <dependency>
+                        <groupId>com.mysql</groupId>
+                        <artifactId>mysql-connector-j</artifactId>
+                        <version>8.2.0</version>
+                </dependency>
+
+                <dependency>
+                        <groupId>com.comerzzia</groupId>
+                        <artifactId>comerzzia-backoffice-servicios</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>com.comerzzia</groupId>
+                        <artifactId>comerzzia-core-model</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>com.comerzzia</groupId>
+                        <artifactId>comerzzia-core-servicios</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>net.sourceforge.dynamicreports</groupId>
+                        <artifactId>dynamicreports-core</artifactId>
+                        <version>3.1.3</version>
+                </dependency>
+                <dependency>
+                        <groupId>com.google.zxing</groupId>
+                        <artifactId>core</artifactId>
+                        <version>3.3.0</version>
+                </dependency>
+                <dependency>
+                        <groupId>com.google.zxing</groupId>
+                        <artifactId>javase</artifactId>
+                        <version>3.3.0</version>
+                </dependency>
+
+        </dependencies>
 		
 
 </project>
