Set packaging for modules and clean root POM

--- a/generar-ft-de-fs-application/pom.xml
+++ b/generar-ft-de-fs-application/pom.xml
@@ -9,6 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
         <artifactId>generar-ft-de-fs-application</artifactId>
+        <packaging>jar</packaging>
         <name>com.comerzzia.bricodepot.generarftdefs-application</name>
         <description>generar ft de fs application</description>
 	
