--- a/generar-ft-de-fs-application/src/main/resources/application.yml
+++ b/generar-ft-de-fs-application/src/main/resources/application.yml
@@ -17,3 +17,5 @@ comerzzia:
     uid_actividad: "40f314f4-8a6e-4c38-82f6-a95a5c8dd0af"
     csv:
         path: ../correcciones.csv
+    xml:
+        backup-path: ../xml_antiguos
